--- a/templates/error.mustache
+++ b/templates/error.mustache
@@ -24,5 +24,5 @@
     }
 }}
 <div class="alert alert-warning">
-    <p>{{#str}}error_nolearningmap, mod_learningmap{{/str}}</p>
+    <p>{{#str}}error_nolearningmap, format_learningmap{{/str}}</p>
 </div>
